--- a/leistungen.html
+++ b/leistungen.html
@@ -1560,8 +1560,8 @@
         width: 40px;
         height: 40px;
         font-size: 24px;
-        bottom: 10px; /* Position angepasst */
-        right: 5px;  /* Position angepasst */
+        bottom: 4px; /* Position angepasst */
+        right: -15px;  /* Weiter nach rechts verschoben */
         transform: translate(0,0); /* Keine Verschiebung mehr */
       }
        #chronische-betreuung .plus-kreis span {
