--- a/leistungen.html
+++ b/leistungen.html
@@ -45,7 +45,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      background-color: #fff; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       /* padding-top: 93px; */ /* Entfernt, damit Hero-Section oben beginnt */
     }
@@ -426,6 +426,10 @@
       max-width: 900px; /* Maximale Breite für den Textblock */
       margin: 40px auto 40px 115px; /* Oben, Rechts-Auto, Unten, Links 0 */
       text-align: left; /* Text linksbündig */
+    }
+    
+    .persoenliche-begleitung-section { /* Neuer Stil für mehr Abstand zum Footer */
+      margin-bottom: 60px; /* Zusätzlicher Abstand nach unten */
     }
 
     .leistungen-beschreibung .highlight-beratung {
@@ -2272,7 +2276,7 @@
 
   </div>
 
-  <div class="leistungen-section">
+  <div class="leistungen-section persoenliche-begleitung-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
