--- a/faq.html
+++ b/faq.html
@@ -834,7 +834,7 @@
       position: relative; /* Erforderlich für die left/transform Zentrierung */
       left: 50%;
       transform: translateX(-50%);
-      overflow-x: hidden; /* Nur horizontales Überlaufen für die Slideshow verbergen */
+      overflow: hidden; /* Horizontales und vertikales Überlaufen verbergen */
       margin-top: 80px; /* Abstand zum Titel vergrößert */
       padding: 50px 0px; /* Etwas Platz oben und unten */
       background-color: #ffffff; 
