--- a/faq.html
+++ b/faq.html
@@ -841,11 +841,11 @@
 
       .quote-content::before {
         top: -15px; 
-        left: -15px; /* Um 20px nach rechts verschoben, um Abschneiden zu verhindern */
+        left: 15px; /* Weiter nach innen verschoben (war -15px) */
       }
       .quote-content::after {
         bottom: -55px; 
-        right: -15px; /* Angepasst für Symmetrie mit ::before bei zentriertem Text */
+        right: 15px; /* Weiter nach innen verschoben (war -15px) */
       }
 
       /* Anpassungen für Button und Antwortkasten */
