--- a/faq.html
+++ b/faq.html
@@ -1061,6 +1061,7 @@
     .faq-slideshow-toggle-animation .icon-pause {
       display: inline-block; /* Stellt sicher, dass Transformationen korrekt angewendet werden */
       transform: scaleX(0.6); /* Macht die Balken auf dem Desktop dünner */
+      letter-spacing: 3px; /* Vergrößert den Abstand zwischen den Balken */
     }
 
     .faq-slideshow-toggle-animation:hover {
