--- a/faq.html
+++ b/faq.html
@@ -1075,7 +1075,7 @@
     /* Anpassung für die Dicke der Pause-Balken */
     .faq-slideshow-toggle-animation .icon-pause {
       display: inline-block; /* Stellt sicher, dass Transformationen korrekt angewendet werden */
-      transform: scaleX(0.6); /* Macht die Balken auf dem Desktop dünner */
+      transform: scaleX(0.6) translateX(2px); /* Macht die Balken dünner und verschiebt sie 2px nach rechts */
       letter-spacing: 3px; /* Vergrößert den Abstand zwischen den Balken */
     }
 
