--- a/faq.html
+++ b/faq.html
@@ -1054,7 +1054,7 @@
       right: 10px;
       background-color: #ffffff; /* Hintergrundfarbe weiß */
       color: #6e370e; /* Schriftfarbe braun */
-      border: 1px solid #6e370e; /* Rahmen braun */
+      border: 1.4px solid #6e370e; /* Rahmen für Desktop auf 1.4px gesetzt */
       border-radius: 50%; /* Kreisform */
       width: 50px; /* Größe erhöht */
       height: 50px; /* Größe erhöht */
@@ -1082,7 +1082,7 @@
     .faq-slideshow-toggle-animation:hover {
       background-color: #6e370e; /* Hintergrundfarbe braun bei Hover */
       color: #ffffff; /* Schriftfarbe weiß bei Hover */
-      border: 1px solid #6e370e; /* Rahmen bleibt, aber in der Farbe des Hintergrunds, um Größe zu halten */
+      border: 1.4px solid #6e370e; /* Rahmen für Desktop auf 1.4px gesetzt und bleibt, aber in der Farbe des Hintergrunds, um Größe zu halten */
       /* Alternativ, wenn der Rahmen komplett weg soll und eine minimale Größenänderung ok ist: border: none; */
     }
 
